[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataproc_utility_tools"
version = "0.1.0"
description = "Data Quality Utility Tools - A comprehensive toolkit for data quality analysis, schema validation, and dataset cleaning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dqu-tools"
Repository = "https://github.com/yourusername/dqu-tools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
dqu-validate = "dqu_tools.cli:main"

[tool.setuptools]
py-modules = []